apps/rook-ceph/deploy/local/releases/rook-ceph-dashboard/traefik-custom-resources/templates/middleware.yaml
---
# Source: traefik-custom-resources/templates/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: rook-ceph
  labels:
    helm.sh/chart: traefik-custom-resources-0.2.15
    app.kubernetes.io/name: https-redirect
    app.kubernetes.io/instance: rook-ceph-dashboard
    app.kubernetes.io/managed-by: Helm
spec:
  redirectScheme:
    permanent: true
    scheme: https
